# slv-rust

./: .gemini-github-config.json  .gitignore  01_protocol_parser.md  02_code_generation.md  03_connection_management.md  04_application_integration.md  05_testing_strategy.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  DEVELOPMENT_JOURNAL.md  HIPPOLOG_COMPARISON.md  ISSUES.md  LICENSE  NETWORKING_ARCHITECTURE_COMPARISON.md  PROTOCOL_PARITY_ISSUE.md  README.md  build.rs  debug_proxy_test.sh  demo.rs  err.md  example.md  int.md  lock_contention_fix.md  log.txt  loginseq.txt  main_plan.md  message_template.msg  netplan.md  nul  oa.hippolog  official_flow.md  perf.md  progress.md  progress2.md  progress3.md  protocol_implementation.md  (+10 more)
.claude/: settings.local.json
docs/adr/: 0001-technology-stack-selection.md  0002-networking-protocol-choice.md  0003-phase-3-integration-and-stability.md  0004-http-client-migration-to-ureq.md
src/: app.rs  lib.rs  main.rs
src/assets/: cache.rs  manager.rs  material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
src/config/: concurrency.rs  hardware.rs  mod.rs  settings.rs
src/networking/: circuit.rs  client.rs  commands.rs  core.rs  effects.rs  manager.rs  mod.rs  quic_transport.rs  session.rs  socks5_udp.rs  transport.rs
src/networking/assets/: cache.rs  manager.rs  mod.rs  types.rs
src/networking/auth/: comprehensive_tests.rs  grid.rs  keychain.rs  keychain_test.rs  login.rs  mod.rs  session.rs  simulator_connection.rs  tests.rs  types.rs  xmlrpc.rs  xmlrpc_corrected.rs  xmlrpc_fixed.rs
src/networking/capabilities/: client.rs  handlers.rs  mod.rs  seed.rs
src/networking/examples/: improved_client.rs
src/networking/handlers/: agent_handlers.rs  asset_handlers.rs  inventory_handlers.rs  login_handlers.rs  mod.rs  region_handlers.rs  system.rs  time_handlers.rs
src/networking/handover/: handlers.rs  mod.rs  state_machine.rs
src/networking/packets/: generated.rs  mod.rs  types.rs
src/networking/protocol/: codecs.rs  lludp.rs  messages.rs  mod.rs  region_handshake.rs  sl_compatibility.rs
src/networking/proxy/: http.rs  mod.rs  socks5.rs  transparent.rs
src/networking/serialization/: mod.rs  packet_buffer.rs  template_deserializer.rs  template_registry.rs  zerocode.rs
src/rendering/: camera.rs  camera_uniform.rs  engine.rs  light.rs  mod.rs  performance_renderer.rs
src/rendering/scene/: graph.rs  mod.rs
src/rendering/shaders/: mod.rs  quality_variants.rs  shader.wgsl
src/ui/: app.rs  chat.rs  inventory.rs  main_window.rs  mod.rs  preferences.rs  proxy.rs  udp_port.rs
src/ui/components/: buttons.rs  forms.rs  mod.rs  modal.rs  status.rs
src/ui/login/: loading.rs  logic.rs  mod.rs  screen.rs
src/ui/main_app/: menu_bar.rs  mod.rs  preferences.rs  world_view.rs
src/utils/: hippolog_parser.rs  lludp.rs  logging.rs  math.rs  mod.rs
src/utils/build_utils/: mod.rs  template_parser.rs
src/world/: avatar.rs  events.rs  mod.rs  physics.rs  terrain.rs
tests/: config_test.rs
