[package]
name = "slv-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Networking
tokio = { version = "1.38.0", features = ["full", "fs"] }
quinn = "0.11.0"
bytes = "1.6.0"

# Rendering
wgpu = "0.20.1"
winit = "0.30.3"
glam = "0.28.0"
image = "0.25.1"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"

# Asset Processing
jpeg2k-sandboxed = "0.9.1"
collada = "0.16.0"
hound = "3.5.1"

# UI Framework
egui = "0.28.1"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"

# Serialization
serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
uuid = { version = "1.9.1", features = ["v4"] }

# Utilities
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
config = "0.14.0"
anyhow = "1.0"
async-trait = "0.1.80"

# Optional Dependencies
# Physics
rapier3d = { version = "0.19.0", optional = true }

# Audio
rodio = { version = "0.18.1", optional = true }
cpal = { version = "0.15.3", optional = true }

# Compression
flate2 = { version = "1.0.30", optional = true }
lz4 = { version = "1.25.0", optional = true }