[package]
name = "slv-rust"
version = "0.3.0"
edition = "2021"

[lib]
name = "slv_rust"
path = "src/lib.rs"

[[bin]]
name = "slv-rust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# --- Networking ---
bytes = "1.10.1"
quinn = "0.11.8"
tokio = { version = "1.46.0", features = ["full", "fs"] }

# --- Rendering ---
bytemuck = { version = "1.19.0", features = ["derive"] }
cgmath = "0.18.0"
glam = "0.30.4"
image = "0.25.6"
wgpu = "23.0.1"
winit = "0.30.7"

# --- Asset Processing ---
collada = "0.16.0"
jpeg2k-sandboxed = "0.9.1"
hound = "3.5.1"

# --- UI Framework ---
eframe = "0.31"

# --- Serialization ---
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# --- Utilities ---
anyhow = "1.0"
async-trait = "0.1.88"
bitflags = "2.9.1"
config = "0.15.11"
crossbeam-channel = "0.5.15"
directories = "5.0"
num_cpus = "1.16"
pollster = "0.4.0"
rand = "0.9.1"
rayon = "1.10"
regex = "1"
scraper = "0.23.1"
serde_json = "1.0.140"
sysinfo = "0.31"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# --- HTTP & XML ---
quick-xml = { version = "0.31", features = ["serialize"] }
reqwest = { version = "0.12", features = ["json", "gzip", "deflate"] }
roxmltree = "0.20"

# --- Optional Dependencies ---
# Physics
rapier3d = { version = "0.26.1", optional = true }
# Audio
cpal = { version = "0.16.0", optional = true }
rodio = { version = "0.20.1", optional = true }
# Compression
flate2 = { version = "1.1.2", optional = true }
lz4 = { version = "1.28.1", optional = true }
md5 = "0.8.0"
byteorder = "1.5.0"

[build-dependencies]
anyhow = "1.0"
